PROJECT(VMTK_TESTING)

set(VMTK_TESTING_INIT_SRC
  __init__.py
  )

IF(NOT VMTK_TESTING_INSTALL_LIB_DIR)
  SET(VMTK_TESTING_INSTALL_LIB_DIR ${CMAKE_BINARY_DIR}/tests)
ENDIF(NOT VMTK_TESTING_INSTALL_LIB_DIR)

FOREACH (SCRIPT_FILE ${VMTK_TESTING_INIT_SRC})
  CONFIGURE_FILE(${VMTK_TESTING_SOURCE_DIR}/${SCRIPT_FILE} ${VMTK_TESTING_INSTALL_LIB_DIR}/${SCRIPT_FILE} COPYONLY)
ENDFOREACH (SCRIPT_FILE)

execute_process(COMMAND git submodule update --init -- ${VMTK_TESTING_SOURCE_DIR}/vmtk-test-data
                WORKING_DIRECTORY ${VMTK_TESTING_SOURCE_DIR})

IF(NOT VMTK_TESTING_DATA_INSTALL_LIB_DIR)
  SET(VMTK_TESTING_DATA_INSTALL_LIB_DIR ${CMAKE_BINARY_DIR}/tests)
ENDIF(NOT VMTK_TESTING_DATA_INSTALL_LIB_DIR)

file(COPY ${VMTK_TESTING_SOURCE_DIR}/vmtk-test-data
    DESTINATION ${VMTK_TESTING_DATA_INSTALL_LIB_DIR})


set(VMTK_TESTING_DIRECTORIES
  test_PypeS
  test_vmtkScripts
  )

FOREACH (TEST_DIR ${VMTK_TESTING_DIRECTORIES})
  add_subdirectory(${TEST_DIR})
ENDFOREACH (TEST_DIR)